# wxMEdit

./: .travis.yml  ChangeLog  Makefile.am  Makefile.in  README.txt  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  description-pak  wxmedit-static.spec  wxmedit.desktop  wxmedit.desktop._  wxmedit.spec  wxmedit_wxsmith.cbp
madedit/: ChangeLog  Makefile.am  Makefile.in  README.txt  aclocal.m4  autogen.sh  chmod_644_all_files.sh  config.h.in  configure  configure.ac  description-pak  madedit-static.spec  madedit.desktop  madedit.spec  madedit.xpm
madedit/charset-detector/: Makefile  README
madedit/charset-detector/include/: chardetect.h
madedit/charset-detector/src/: CharDistribution.cpp  JpCntx.cpp  LangCyrillicModel.cpp  LangGreekModel.cpp  Makefile  nsBig5Prober.cpp  nsCharSetProber.cpp  nsEUCJPProber.cpp  nsEscCharsetProber.cpp  nsEscSM.cpp  nsHebrewProber.cpp  nsMBCSGroupProber.cpp  nsMBCSSM.cpp  nsSBCSGroupProber.cpp  nsSBCharSetProber.cpp  nsUniversalDetector.cpp
madedit/charset-detector/src/entry/: impl.cpp
madedit/charset-detector/test/: Makefile
madedit/debian/: changelog  control  copyright  menu
madedit/devcpp/: MadEdit.dev  MadEdit.layout  MadEdit_private.h  MadEdit_private.rc
madedit/freebsd/: pkg-comment  pkg-descr  pkg-plist  pkgcreate.txt
madedit/image2xpm/: image2xpm.dev  image2xpm.vcproj  image2xpmApp.cpp  image2xpmApp.h  image2xpmApp.rc  image2xpmFrm.cpp  image2xpmFrm.h  image2xpm_private.h  image2xpm_private.rc
madedit/images/: Mad.xpm  Mad_16x15.xpm  closeall.xpm  down.xpm  fileclose.xpm  findnext.xpm  fontsize.xpm  hexmode.xpm  indent.xpm  nowrap.xpm  null.xpm  preview.xpm  replace.xpm  saveall.xpm  textmode.xpm  uncomment.xpm  unindent.xpm  wrapbywin.xpm
madedit/libunicows/: README.txt
madedit/makefiles/: Makefile.debug  Makefile.install  Makefile.linux  Makefile.mac  Makefile.mingw  zcfg_madedit_release.sh  zcfg_wx_debug.sh  zcfg_wx_release.sh
madedit/po/: ChangeLog  Makefile.in.in  Makevars  POTFILES.in  it_IT.gmo  it_IT.po  ja_JP.gmo  ja_JP.po  madedit.pot  src.list  wxstd.po.txt  xgettext.bat  xgettext_join.bat  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
madedit/src/: MadAboutDialog.cpp  MadAboutDialog.h  MadAboutDialog.wxform  MadCommand.h  MadConvEncDialog.cpp  MadConvEncDialog.h  MadConvEncDialog.wxform  MadEditApp.cpp  MadEditApp.h  MadEditApp.rc  MadEditFrame.cpp  MadEditFrame.h  MadEditFrame.wxform  MadFileAssociationDialog.cpp  MadFileAssociationDialog.h  MadFileAssociationDialog.wxform  MadFindInFilesDialog.cpp  MadFindInFilesDialog.h  MadFindInFilesDialog.wxform  MadHighlightingDialog.cpp  MadHighlightingDialog.h  MadHighlightingDialog.wxform  MadOptionsDialog.cpp  MadOptionsDialog.h  MadOptionsDialog.wxform  MadPlugin.cpp  MadPrintout.cpp  MadPrintout.h  MadReplaceDialog.cpp  MadReplaceDialog.h  MadReplaceDialog.wxform  MadSearchDialog.cpp  MadSearchDialog.h  MadSearchDialog.wxform  MadSortDialog.cpp  MadSortDialog.h  MadSortDialog.wxform  MadUtils.cpp  MadUtils.h  MadWordCountDialog.cpp  (+3 more)
madedit/src/MadEdit/: MadDeque.hpp  MadEdit.cpp  MadEdit.h  MadEditAdvanced.cpp  MadEditBasic.cpp  MadEditCommand.cpp  MadEditCommand.h  MadEditSearch.cpp  MadEdit_gtk.cpp  MadEncoding.cpp  MadEncoding.h  MadLines.cpp  MadLines.h  MadSyntax.cpp  MadSyntax.h  MadUndo.cpp  MadUndo.h  TradSimp.cpp  TradSimp.h  caret_new.cpp  caret_new.h  clipbrd_gtk.cpp  clipbrd_gtk.h  ucs4_t.h
madedit/src/plugin_example/: makefile.vc  plugin.cpp
madedit/syntax/: Dark.sch  DarkBlue.sch  Gray.sch  Makefile.am  Makefile.in  _COLOR_.html  extension.list  filename.list  firstline.list  syntax_actionscript.syn  syntax_awk.syn  syntax_batch.syn  syntax_conf.syn  syntax_cpp.syn  syntax_csharp.syn  syntax_css.syn  syntax_d.syn  syntax_diff.syn  syntax_fortran.syn  syntax_html.syn  syntax_java.syn  syntax_javascript.syn  syntax_js_html.syn  syntax_jsp.syn  syntax_latex.syn  syntax_lua.syn  syntax_nfo.syn  syntax_pas.syn  syntax_perl.syn  syntax_php.syn  syntax_python.syn  syntax_reg.syn  syntax_ruby.syn  syntax_sh.syn  syntax_sql.syn  syntax_syn.syn  syntax_txt.syn  syntax_visualbasic.syn  syntax_x86asm.syn  syntax_xml.syn
madedit/vc71/: MadEdit.sln  MadEdit.vcproj  build_debug.bat  build_release.bat
madedit/vc80/: MadEdit.sln  MadEdit.vcproj
madedit/vs.net2003/: MadEdit.vcproj
madedit/wxAUI/include/: auibook.h  dockart.h  floatpane.h  framemanager.h  manager.h
madedit/wxAUI/include/wx/aui/: aui.h  auibar.h  auibook.h  dockart.h  floatpane.h  framemanager.h  tabmdi.h
madedit/wxAUI/src/: auibar.cpp  auibook.cpp  dockart.cpp  floatpane.cpp  framemanager.cpp  manager.cpp  tabmdi.cpp
madedit/wxFlatNotebook/: README
madedit/wxFlatNotebook/include/wx/wxFlatNotebook/: fnb_resources.h  renderer.h  singleton.h  smart_ptr.h  wxFNBDropTarget.h  wxFlatNotebook.h
madedit/wxFlatNotebook/src/wxFlatNotebook/: LeftDoubleClick.txt  dnd_copy.xpm  dnd_move.xpm  dnd_none.xpm  fnb_resources.cpp  popup_dlg.cpp  renderer.cpp  wxFlatNotebook.cpp
madedit/xpressive/: README.TXT
madedit/xpressive/boost/xpressive/: basic_regex.hpp  match_results.hpp  regex_algorithms.hpp  regex_compiler.hpp  regex_constants.hpp  regex_error.hpp  regex_iterator.hpp  regex_primitives.hpp  regex_token_iterator.hpp  regex_traits.hpp  sub_match.hpp  xpressive.hpp  xpressive_dynamic.hpp  xpressive_fwd.hpp  xpressive_static.hpp  xpressive_typeof.hpp
madedit/xpressive/boost/xpressive/detail/: detail_fwd.hpp
madedit/xpressive/boost/xpressive/detail/core/: access.hpp  action.hpp  action_state.hpp  adaptor.hpp  finder.hpp  flow_control.hpp  icase.hpp  linker.hpp  matchers.hpp  optimize.hpp  peeker.hpp  quant_style.hpp  regex_impl.hpp  results_cache.hpp  state.hpp  sub_match_impl.hpp  sub_match_vector.hpp
madedit/xpressive/boost/xpressive/detail/dynamic/: dynamic.hpp  matchable.hpp  parse_charset.hpp  parser.hpp  parser_enum.hpp  (+1 more)
madedit/xpressive/boost/xpressive/proto/: arg_traits.hpp  op_base.hpp  op_tags.hpp  operators.hpp  proto.hpp  proto_fwd.hpp  proto_typeof.hpp
madedit/xpressive/boost/xpressive/traits/: c_regex_traits.hpp  cpp_regex_traits.hpp  null_regex_traits.hpp
(+690 files in other folders)
